--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.3",
+    "axios": "^1.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@tailwindcss/vite": "^4.0.0",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
+    "laravel-vite-plugin": "^1.0.0",
     "typescript": "^5.2.2",
     "vite": "^5.0.8"
   }
