--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.3",
+    "@types/node": "^25.2.2",
+    "autoprefixer": "^10.4.24",
     "axios": "^1.6.0",
+    "postcss": "^8.5.6",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^7.13.0",
+    "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
     "@tailwindcss/vite": "^4.0.0",
