--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "proxy": "node proxy-server.cjs"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.3",
@@ -24,6 +25,7 @@
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
+    "http-proxy": "^1.18.1",
     "laravel-vite-plugin": "^1.0.0",
     "typescript": "^5.2.2",
     "vite": "^5.0.8"
